make sure overlapping times are on different lines

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ tbody th div {
 	left: 0;
 	background-color: #ff0;
 	border-right: 1px solid #000;
-	height: 2em;
+	height: calc(2em * var(--rows));
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -59,7 +59,7 @@ tbody td div {
 	height: calc(2em - 6px);
 	margin: 0;
 	padding: 0;
-	top: 3px;
+	top: calc(3px + var(--row) * 2em);
 	box-sizing: border-box;
 	border: 1px solid #000;
 }
